# ak-p2-lab2

./: .gitignore  CMakeLists.txt  Makefile  build.ninja
build_ninja/: .ninja_deps  .ninja_log  CMakeCache.txt  cmake_install.cmake
src/: calc.cpp  main.cpp
